--- a/pages/aboutmen/bio2.html
+++ b/pages/aboutmen/bio2.html
@@ -153,7 +153,7 @@
 
   
   <div class="box">
-    <p><em>"Saya suka koding walaupun error. wkwkwk"</em></p>
+    <p><em>"Saya suka koding walaupun saat ngoding sering error. wkwkwk :p "</em></p>
   </div>
 
 <button class="back-btn" onclick="window.location.href='../../index.html'">⬅ Kembali</button>
